@@ -724,9 +724,9 @@ static int WAV_open_internal(Sound_Sample *sample, const char *ext, fmt_t *fmt)
                                sample->actual.channels );
     internal->decoder_private = (void *) w;
 
-    sample->total_time = (fmt->total_bytes / fmt->dwAvgBytesPerSec) * 1000;
-    sample->total_time += (fmt->total_bytes % fmt->dwAvgBytesPerSec)
-                       *  1000 / fmt->dwAvgBytesPerSec;
+    internal->total_time = (fmt->total_bytes / fmt->dwAvgBytesPerSec) * 1000;
+    internal->total_time += (fmt->total_bytes % fmt->dwAvgBytesPerSec)
+                              *  1000 / fmt->dwAvgBytesPerSec;
 
     sample->flags = SOUND_SAMPLEFLAG_NONE;
     if (fmt->seek_sample != NULL)
